<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.aptatek.pkulab.widget.HeaderView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general.distance.mini"
        android:layout_marginEnd="@dimen/general.distance.mini"
        android:layout_marginTop="@dimen/header.margin.top"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subTitleText="@string/parental.welcome.description"
        app:titleText="@string/parental.welcome.title" />

    <Space
        android:id="@+id/header_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/general.distance.32dp"
        app:layout_constraintTop_toBottomOf="@+id/header"/>

    <EditText
        android:id="@+id/parentalBirthDate"
        style="@style/Parental.Input"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/general.distance.32dp"
        android:layout_marginEnd="@dimen/general.distance.32dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/parentalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_space"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="11/11/1984" />

    <EditText
        android:id="@+id/parentalAge"
        style="@style/Parental.Input"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/general.distance.32dp"
        android:layout_marginEnd="@dimen/general.distance.32dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="@dimen/general.distance.mini"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentalBirthDate"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="11" />

    <Button
        android:id="@+id/parentalButton"
        style="@style/General.Rounded.Blue.Button"
        android:layout_marginTop="12dp"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/general.distance.32dp"
        android:layout_marginEnd="@dimen/general.distance.32dp"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentalBirthDate"
        tools:text="@string/parental.welcome.enter.birthday" />

    <TextView
        android:id="@+id/parentalDisclaimer"
        style="@style/General.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/parental.welcome.age.disclaimer"
        android:textSize="@dimen/font.size.normal"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        layout="@layout/dial_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pin.dial.height"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideKeypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>
