<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keypad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/applicationWhite">

    <View
        android:layout_width="match_parent"
...
    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.1" />

        <Button
            android:id="@+id/button2"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.2" />

...
    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.4" />

...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.7" />

        <Button
            android:id="@+id/button8"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.8" />

...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.0" />

        <Button
            android:id="@+id/buttonAction"
            style="@style/Parental.Keypad.Next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="Next" />

...
